--- a/styles/slide.module.scss
+++ b/styles/slide.module.scss
@@ -1,28 +1,29 @@
 @import "variables.module.scss";
 
 .slideContainer {
-    height: 375px;
-    border-radius: 8px;
+    height: 350px;
+    border-radius: 16px;
+    box-shadow: 0px 0px 1px #000;
+    
     .textContainer {
         background-color: #fff;
         word-wrap: break-word;
         white-space: pre-line;
         display: flex;
-        width: 100%;
         height: 60%;
         justify-content: center;
         align-items: center;
         word-break: keep-all;
-        padding: 40px 35px;
+        padding: 55px;
         font-size: 18px;
         font-weight: 400;
         font-style: italic;
         line-height: 2;
         word-spacing: 5px;
-        color: $darkBlue;
         border-radius: 16px 16px 0px 0px;
 
         p {
+            color: #000;
             user-select: none;
             text-align: left;
             align-items: center;
@@ -36,7 +37,7 @@
         background-color: #f8f8f8;
         align-items: center;
         text-align: left;
-        height: 30%;
+        height: 40%;
         align-items: center;
         text-align: left;
         justify-content: left;
@@ -67,6 +68,15 @@
         }
     }
 }
+
+@media screen and (max-width: 1440px) {
+    .slideContainer {
+        .textContainer {
+            padding: 30px 35px;
+            font-size: 18px;
+        }
+    }
+}
 @media screen and (max-width: 768px) {
     .slideContainer {
         height: 250px;
@@ -75,63 +85,71 @@
         }
     }
 }
-@media screen and (max-width:576px) {
-    .slideContainer{
-        .textContainer{
+@media screen and (max-width: 576px) {
+    .slideContainer {
+        .textContainer {
             font-size: 12px;
         }
     }
-    
 }
 @media screen and (max-width: 475px) {
     .slideContainer {
         .textContainer {
             padding: 35px 30px;
-            font-size: 13px;
+            font-size: 11px;
             word-spacing: 0px;
             line-height: 1.6;
         }
         .personContainer {
             .name {
-                font-size: 25px;
+                font-size: 17px;
             }
         }
     }
 }
-@media screen and (max-width:414px) {
-    .slideContainer{
-        .personContainer{
-            .name{
+@media screen and (max-width: 414px) {
+    .slideContainer {
+        .personContainer {
+            .name {
                 font-size: 15px;
             }
-            .ocupation{
+            .ocupation {
                 font-size: 13px;
             }
         }
     }
-    
 }
 
 @media screen and (max-width: 375px) {
     .slideContainer {
         .textContainer {
-           padding: 35px 30px;
-           line-height: 1.3;
+            padding: 35px 30px;
+            line-height: 1.3;
         }
         .personContainer {
             .name {
                 font-size: 15px;
             }
-            .ocupation{
-font-size: 10px;
+            .ocupation {
+                font-size: 10px;
             }
         }
     }
 }
-@media screen and (max-width:325px) {
-   .slideContainer{
-    .textContainer{
-        font-size: 12px;
+@media screen and (max-width: 325px) {
+    .slideContainer {
+        .textContainer {
+            font-size: 12px;
+        }
     }
-   } 
+}
+
+@media screen and (max-width:390px) {
+    .slideContainer{
+        .textContainer{
+            padding: 30px 15px;
+            font-size: 12px;
+        }
+    }
+    
 }
