--- a/styles/slider.module.scss
+++ b/styles/slider.module.scss
@@ -3,6 +3,7 @@
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
 .sliderModule {
     background-color: #F3DDB4;
+    height: 550px;
     .sliderContainer {
         width: 100%;
         max-width: 100%;
@@ -13,8 +14,7 @@
             min-width: 100%;
             flex-direction: row;
             list-style: none;
-            padding: 0%;
-            margin: 0%;
+           
         }
     }
     button{
